--- a/css/variables.css
+++ b/css/variables.css
@@ -1,7 +1,7 @@
 :root {
-    --clr1: ;
-    --clr2: ;
-    --clr3: ;
-    --clr4: ;
-    --clr5: ;
+    --clr1: 39, 45, 45;
+    --clr2: 35, 206, 107;
+    --clr3: 246, 248, 255;
+    --clr4: 80, 81, 79;
+    --clr5: 168, 70, 160;
 }
